--- a/volume/samp_app/config/database.yml
+++ b/volume/samp_app/config/database.yml
@@ -1,8 +1,8 @@
-env:
+env: dev
 
 dev:
-  adapter:
-  database:
+  adapter: SQLite
+  database: db/ask.sqlite
   host:
   username:
   password:
@@ -10,7 +10,7 @@ dev:
   config:
 
 prod:
-  adapter:
+  adapter: SQLite
   database:
   host:
   username:
