--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       - "8000:8000"
     volumes:
       - ./volume:/volume
+    depends_on:
+      - postgres
+
+  postgres:
+    container_name: "postgres"
+    image: postgres
+    environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d
